--- a/style.scss
+++ b/style.scss
@@ -43,9 +43,13 @@
 .container {
   display: flex;
   justify-content: center;
+  // background: red;
+
 }
 .rick-container {
   width: 270px;
+  min-width: 270px;
+  min-height: max-content;
   z-index: 1;
   display: flex;
   justify-content: center;
